# sentinela-ai

./: .env.example  .env.prod.example  .gitignore  Makefile  README.md  STATUS.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
dashboard/: Dockerfile  app.py
dashboard/componentes/: api.py  graficos.py
dashboard/paginas/: alertas.py  avaliacoes.py  comparacoes.py  datasets.py  traces.py  visao_geral.py
docs/: arquitetura.md  avaliadores.md  avaliadores_customizados.md  deploy.md  licoes-deploy.md  referencia_sdk.md
exemplos/langchain_generico/: README.md  exemplo.py
exemplos/postador/: README.md  (+2 more)
sdk/: README.md  pyproject.toml
sdk/sentinela/: __init__.py  cliente.py  decoradores.py  modelos.py
sdk/sentinela/integracoes/: __init__.py  langchain.py
sdk/testes/: test_decoradores.py
servidor/: Dockerfile  alembic.ini  popular_dados.py  pyproject.toml
servidor/app/: configuracao.py  main.py
servidor/app/api/: alertas.py  analytics.py  datasets.py  drift.py  ingestao.py  traces.py
servidor/app/avaliadores/: base.py  coerencia.py  customizado.py  deteccao_pii.py  eficiencia_custo.py  faithfulness.py  relevancia.py  toxicidade.py
servidor/app/bd/: sessao.py
servidor/app/bd/migracoes/: env.py
servidor/app/esquemas/: trace.py
servidor/app/modelos/: __init__.py  alerta.py  dataset.py  trace.py
servidor/app/nucleo/: detector_drift.py  guardrails.py  motor_avaliacao.py  notificador.py
servidor/app/workers/: celery_app.py  worker_alerta.py  worker_analytics.py  worker_avaliacao.py  worker_benchmark.py
(+3 files in other folders)
