[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinela-ai"
version = "0.1.0"
description = "SDK Python para avaliação e observabilidade de LLMs em produção"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["sentinela"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
