[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinela-servidor"
version = "0.1.0"
description = "Backend da plataforma Sentinela AI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "celery[redis]>=5.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
